--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     Thank you for trying it out. <br /> Your first project is up and running
     now.
   </h1>
+    <h2>Esto si que está bueno</h2>
+    <h3>Me empieza a gustar esto de <em>verdad</em></h3>
   <section class="counter">
     <div class="counter-info">
       <p class="counter-text">Counter is</p>
